quirin_website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quirin-website
  namespace: quirin-website
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: quirin-website
